# protocol

./: .gitignore  AttesterCAComm.hs  git-protocol-change-user.sh
tpm/attesterCAcomm/: AttesterCAcomm.cabal  caFile.txt
tpm/mainline/: ABMainBackup.txt  attEKPubKey.txt  autoSCP.exp  buildAll.sh  buildAll.sh~  caFile.txt  cabal.sandbox.config  domains.txt  getVMIp.exp  goldenNotWork.txt  goldenPcrComosite.txt  goldenPcrComposite.txt  ips.txt  mains.hs  sandboxinit.sh  scp.sh  scpN.sh  storeIPs.sh  tpm.cabal  tpm.cabal.orig  tpm.cabal_experiments
tpm/mainline/.cabal-sandbox/: add-source-timestamps
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/HsOpenSSL-0.11/: OpenSSL.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/HsOpenSSL-0.11/OpenSSL/: ASN1.dyn_hi  BIO.dyn_hi  BN.dyn_hi  Cipher.dyn_hi  DH.dyn_hi  DSA.dyn_hi  ERR.dyn_hi  Objects.dyn_hi  PEM.dyn_hi  PKCS7.dyn_hi  RSA.dyn_hi  Random.dyn_hi  SSL.dyn_hi  Session.dyn_hi  Stack.dyn_hi  Utils.dyn_hi  X509.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/QuickCheck-2.7.6/Test/: QuickCheck.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/VChanUtil-0.1.3.0/: VChanUtil.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/cereal-0.4.0.1/Data/: Serialize.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/crypto-api-0.13/Crypto/: CPoly.dyn_hi  Classes.dyn_hi  HMAC.dyn_hi  Modes.dyn_hi  Padding.dyn_hi  Random.dyn_hi  Types.dyn_hi  Util.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/network-2.5.0.0/: Network.dyn_hi
tpm/mainline/.cabal-sandbox/lib/x86_64-linux-ghc-7.8.2/shell-1.0/: Shell.dyn_hi
tpm/mainline/.cabal-sandbox/x86_64-linux-ghc-7.8.2-packages.conf.d/: HsOpenSSL-0.11-bf65fdf58f66123328bfcd318da2c14a.conf  QuickCheck-2.7.6-82f6a9483443560dc42396317e5d8ecd.conf  RSA-1.0.2-e88ac7f5fca1f29dd9b0a551da18abb8.conf  SHA-1.6.4.1-d2d6d83273e9d95700edc6718d8e2526.conf  VChanUtil-0.1.3.0-4c2695b20a7aaf31c688027ad6ab0a02.conf  cereal-0.4.0.1-73bd3de28b3048845b0e2f836d445eab.conf  crypto-api-0.13-7e6146b4647215766d1b900e94db9598.conf  digest-0.0.1.2-b6b934b782c1f494ce6ab1fe3bac2ccf.conf  editline-0.2.1.1-a4e3cdb5e9d916c22df59a575cf23276.conf  entropy-0.3.2-635e98e609a98832d6938138e2eb8190.conf  ghc-paths-0.1.0.9-343f8b3acfee01934966dc28b4be39a7.conf  mtl-2.1.3.1-89ed04036fb57647047a12ac69cffae6.conf  network-2.5.0.0-98dd9b7509977b6a8108c007474f018e.conf  package.cache  parsec-3.1.5-63f9ebe822dcccf7dfa67bacbd4289df.conf  primitive-0.5.3.0-48879685fb5ebad8d0b3470d7cb5546a.conf  pureMD5-2.1.2.1-a64c5bb5a3b757d9620ce8f0a398afc2.conf  random-1.0.1.1-6ee738046e61b4cfbe8ae4a5ddcd83ac.conf  shell-1.0-e9cdd0c7b4827c1955f47afb47818dda.conf  tagged-0.7.2-570dcf9b696dc2ba06e8c64905c35513.conf  text-1.1.1.3-407464a08a0049a9e3d03558dfb0ee1d.conf  tf-random-0.5-bdf01f2e8ced3ac40fd602ae097b55c5.conf  zip-archive-0.2.3.2-b2aa2fb8cc396e1360c94e4a80c9eb53.conf  zlib-0.5.4.1-28f4afec94c21c1745f93b2774aac5ad.conf
tpm/mainline/api/Plugins/: API.hs
tpm/mainline/appraisal/: Appraiser.hs  Appraiser.hs~  AppraiserMain.hs  AppraiserMain.hs~
tpm/mainline/attestation/: #Attestation.hs#  .#Attestation.hs  Attestation.hs  Attestation.hs~  AttestationMain.hs  AttestationMain.hs~  AttesterCAComm.hs  ExportEK.hs  ExportEK.hs~  OrigAttestation.hs
tpm/mainline/demo3/: Demo3.hs
tpm/mainline/demo3/Demo3/: Appraiser.hs  Attestation.hs  Demo3Shared.hs  Measurer.hs
tpm/mainline/interpreter/: InterpreterTypes.hs
tpm/mainline/measurer/: Measurer.hs  Measurer.hs~  MeasurerMain.hs
tpm/mainline/privacyCA/: #ScottyCA.hs#  AttesterCAComm.hs  CADataTypes.hs  PrivacyCA.hs  PrivacyCA.hs~  PrivacyCAMain.hs  ScottyCA.hs  ScottyCA.hs~  initializeArmoredDB.sql  scottyCA.hs  testsql.hs
tpm/mainline/project/: Main.hs  Main.hs~
tpm/mainline/protoMonad/: #AttesterMain.hs#  #ProtoMonad.hs#  .#ProtoMonad.hs  AMain.hs  AppMain.hs  AttMain.hs  AttesterMain.hs  BMain.hs  CAMain.hs  CAProtoMain.hs  Keys.hs  ProtoActions.hs  ProtoMain.hs  ProtoMonad.hs  ProtoTypes.hs  ProtoTypesA.hs  TPMUtil.hs
tpm/mainline/provisioning/: #Provisioning.hs#  Provisioning.hs  Provisioning.hs~  ProvisioningMain.hs  ProvisioningMain.hs~
tpm/mainline/shared/: Attestation_demo2.hs  Demo3Shared.hs  Demo3Shared.hs.orig  Demo3Shared.hs~  Demo3SharedNOVCHAN.hs  Demo3Vchan.hs  JSONCaster_demo2.hs  Measurer_demo2.hs
tpm/mainline/shared/protocolprotocol/: #ProtoTypes.hs#  AbstractedCommunication.hs  AbstractedCommunicationMain.hs  AppraiserProtocol_.hs  AttesterCAComm.hs  ChannelNegotiation.hs  CommTools.hs  CommunicationNegotiator.hs  HttpChannel.hs  PortNegotiator.hs  PortNegotiatorMain.hs  ProtoTypes.hs  Protocol.hs  ProtocolDefinitions.hs  TestChannel.hs  TestHttpChannelA.hs  TestHttpChannelB.hs  TestHttpChannelBMain.hs  TestHttpChannelMain.hs  TestIP.hs  TestIPMain.hs  VChanComm.hs  communicationProtocolDescription.txt  getYourOwnIPtester.hs
tpm/mainline/shared/protocolprotocol/AppraiserProtocol/: AppraiserProtocol.hs  AppraiserProtocolMain.hs
tpm/mainline/shared/protocolprotocol/AttesterProtocol/: AttesterProtocol.hs  AttesterProtocolMain.hs
tpm/mainline/shell/: Main.hs  TpmiMain.hs
tpm/mainline/shell/Shell/Commands/: Admin.hs  Capability.hs  Key.hs  PCR.hs  Session.hs  Storage.hs
tpm/mainline/src/: TPM.hs
tpm/mainline/src/TPM/: #Storage.hs#  #Types.hs#  .#Storage.hs  .#Types.hs  Admin.hs  Cipher.hs  Const.hs  Key.hs  SignTest.hs  Storage.hs  Tmp.hs~  Types.hs  Utils.hs
tpm/scottyca/: AttesterCAComm.hs  AttesterCACommMain.hs  Demo3SharedNOVCHAN.hs  PrivacyCA.hs  PrivacyCA.hs~  PrivacyCAMain.hs  PutEntrySQL.hs  ScottyCA.hs  ScottyCA.hs~  ScottyCAMain.hs  ScottyCAMain.hs~  armoredDB.db  initializeArmoredDB.sh  initializeArmoredDB.sh~  initializeArmoredDB.sql~  pubkeyTable.csv  pubkeyTable.csv~  scottyCA.hs  scottyCA.hs~  scottyca.cabal  testsql.hs  testsql.hs~
tpm/shell/mainline/: Setup.hs  shell.cabal
tpm/shell/mainline/src/: Main.hs  Shell.hs
tpm/shell/mainline/src/Shell/: API.hs  Readline.hs  Zip.hs
tpm/shell/mainline/src/Shell/Commands/: Echo.hs  Exit.hs  Help.hs  Reload.hs  Repeat.hs
(+4641 files in other folders)
