Name:                   AttesterCAcomm
Version:                0.1
Description:            A scotty CA server
License:                BSD3
--License-file:           LICENSE
Author:                 Paul Kline
Maintainer:             p098k866@ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple       



library           
  exposed-modules:      AttesterCAComm
  hs-source-dirs:       ../mainline/shared, ./, ../mainline/src, ../shell
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        cipher-aes,
                        HDBC,
                        HDBC-sqlite3,
                        io-streams,
                        http-streams,
                        HTTP,
                        network-uri,
                        base64-bytestring,
                        aeson,
                        transformers,
                        text,
                        unordered-containers
  ghc-options:          -dynamic -shared -fPIC -o libHSAttesterCAcomm.so
