Name:                   tpm
Version:                0.1
Description:            A tpm shell
License:                BSD3
License-file:           LICENSE
Author:                 Wesley Peck
Maintainer:             peckw@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple



executable              Project
  hs-source-dirs:       api, shell, src, shared, project, appraisal, attestation, measurer, privacyCA, provisioning
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        cipher-aes,
                        base64-bytestring,
                        text,
                        aeson,
                        unordered-containers,
                        transformers,
                        scotty
  Main-is:              Main.hs
  ghc-options:          -O

executable tpmi
  hs-source-dirs:       api, shell, src, shared
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: TpmiMain.hs
  ghc-options: -O


executable              Attestation
  hs-source-dirs:       api, shell, src, shared, attestation, ../attesterCAcomm
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        transformers,
                        network-uri < 2.6,
                        VChanUtil
  Main-is:              AttestationMain.hs
  ghc-options:          -O

executable              Appraiser
  hs-source-dirs:       api, shell, src, shared, appraisal, provisioning
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is:              AppraiserMain.hs
  ghc-options:          -O

executable              Measurer
  hs-source-dirs:       api, shell, src, shared, measurer
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        monad-loops
  Main-is:              MeasurerMain.hs
  ghc-options:          -O

executable              PrivacyCA
  hs-source-dirs:       api, shell, src, shared, privacyCA
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        cipher-aes,
                        HDBC,
                        HDBC-sqlite3,
                        io-streams,
                        http-streams,
                        HTTP,
                        network-uri < 2.6
  Main-is:              PrivacyCAMain.hs
  ghc-options:          -O

executable              Provisioning
  hs-source-dirs:       api, shell, src, shared, provisioning
  build-depends:        base >= 4,
                        shell >= 1.0,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: ProvisioningMain.hs
  ghc-options: -O



