Name:                   tpm
Version:                0.1
Description:            A tpm shell
License:                BSD3
License-file:           LICENSE
Author:                 Wesley Peck
Maintainer:             peckw@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple



executable              Project
  hs-source-dirs:       api, src, shared, project, appraisal, attestation, measurer, privacyCA, provisioning, interpreter, protoMonad, shared/protocolprotocol, shared/protocolprotocol/AppraiserProtocol, shared/protocolprotocol/AttesterProtocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        cipher-aes,
                        base64-bytestring,
                        text,
                        aeson,
                        unordered-containers,
                        transformers,
                        scotty
  Main-is:              Main.hs
  ghc-options:          -O -threaded

executable              Attestation
  hs-source-dirs:       api, src, shared, attestation, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        transformers,
                        network-uri < 2.6,
                        VChanUtil
  Main-is:              AttestationMain.hs
  ghc-options:          -O

executable              Appraiser
  hs-source-dirs:       api, src, shared, appraisal, provisioning, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is:              AppraiserMain.hs
  ghc-options:          -O

executable              Measurer
  hs-source-dirs:       api, src, shared, measurer, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        monad-loops
  Main-is:              MeasurerMain.hs
  ghc-options:          -O

executable              PrivacyCA
  hs-source-dirs:       api, src, shared, privacyCA, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil,
                        cipher-aes,
                        HDBC,
                        HDBC-sqlite3,
                        io-streams,
                        http-streams,
                        HTTP,
                        network-uri < 2.6
  Main-is:              PrivacyCAMain.hs
  ghc-options:          -O

executable              Provisioning
  hs-source-dirs:       api, src, shared, provisioning
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: ProvisioningMain.hs
  ghc-options: -O

executable              AttesterMain
  hs-source-dirs:       api, src, shared, protoMonad, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: AttesterMain.hs
  ghc-options: -O

executable              AppMain
  hs-source-dirs:       api, src, provisioning, shared, protoMonad, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: AppMain.hs
  ghc-options: -O

executable              CAMain
  hs-source-dirs:       api, src, shared, protoMonad, shared/protocolprotocol
  build-depends:        base >= 4,
                        mtl,
                        directory,
                        containers,
                        bytestring,
                        binary,
                        network < 2.6,
                        random,
                        --network-bytestring,
                        HsOpenSSL,
                        SHA,
                        RSA,
                        parsec >= 3,
                        filepath,
                        VChanUtil
  Main-is: CAMain.hs
  ghc-options: -O -threaded
executable              Protocol
  hs-source-dirs:       api, src, shared, provisioning, attestation, shared/protocolprotocol, protoMonad
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        stm,
                        time


  Main-is: ProtocolMain.hs
  ghc-options: -O -threaded

executable              AttesterProtocol
  hs-source-dirs:       api, src, shared, provisioning, shared/protocolprotocol/AttesterProtocol, shared/protocolprotocol, protoMonad
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        network-info


  Main-is: AttesterProtocolMain.hs
  ghc-options: -O -threaded

executable              AppraiserProtocol
  hs-source-dirs:       api, src, shared, provisioning, shared/protocolprotocol/AppraiserProtocol, shared/protocolprotocol, protoMonad
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        network-info


  Main-is: AppraiserProtocolMain.hs
  ghc-options: -O -threaded


executable              AbstractCommunication
  hs-source-dirs:       shared/protocolprotocol
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        network-info


  Main-is: AbstractCommunicationMain.hs
  ghc-options: -O -threaded

executable              TestHttpChanA
  hs-source-dirs:       shared/protocolprotocol, shared, src
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        network-info


  Main-is: TestHttpChannelAMain.hs
  ghc-options: -O -threaded

executable              TestHttpChanB
  hs-source-dirs:       shared/protocolprotocol, shared, src
  build-depends:        base >= 4,
                        network < 2.6,
                        network-uri < 2.6,
                        network-info


  Main-is: TestHttpChannelBMain.hs
  ghc-options: -O -threaded
